# mdview

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/mdview/: __init__.py  __main__.py  app.py  cli.py  config.py  convert.py  dcd.py  files.py  process.py  render.py
src/mdview/static/: app.js  index.html
tests/: conftest.py  test_browse.py  test_convert.py  test_files_api.py  test_lipids.py  test_prepare_api.py  test_process.py  test_render.py  test_security.py  test_trajectory.py
tests/data/: alad_v.dcd  alad_v.psf  go_fixed_phi_psi.dcd
tools/: patch_molstar_lipids.py
