[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdview"
version = "0.1.0"
description = "Browser-served interactive visualization of molecular dynamics systems, designed for access over an SSH tunnel."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cameron F. Abrams", email = "cfa22@drexel.edu" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
keywords = [
    "molecular-dynamics", "visualization", "molstar", "fastapi",
    "namd", "gromacs", "charmm", "trajectory", "membrane", "mdanalysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/cameronabrams/mdview"
Repository = "https://github.com/cameronabrams/mdview"
Issues = "https://github.com/cameronabrams/mdview/issues"

[project.optional-dependencies]
# Server-side format conversion / topology+coords merging (phase 2). Optional:
# Mol* reads PDB/mmCIF/GRO/PSF+DCD/XTC natively in the browser without this.
convert = ["parmed>=4", "numpy>=1.23"]
# Server-side trajectory processing (stride/strip/align). Heavy (pulls scipy via
# MDAnalysis), hence opt-in; reuses parmed to build the reduced bonded model.
process = ["MDAnalysis>=2.7", "parmed>=4", "numpy>=1.23"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
mdview = "mdview.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
